[package]
name = "orbits"
version = "0.1.0"
edition = "2018"
license = "gpl-3.0"
license-file = "license.txt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.0"
#sdl2 = "0.35.0"


[dependencies.sdl2]
version = "0.35.0"
default-features = false
features = ["ttf"]